--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body>
     
     <select id="fileDropdown" onchange="loadFileContent()">
-        <option selected disabled>Select a file</option>
+        <option selected disabled>Select a Question</option>
     </select>
     <pre><code id="fileContent" class="python"></code></pre>
 
